// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCurveShape > both sides of active bin > fallback ratio should work 1`] = `
{
  "224": [
    0n,
    208871409n,
  ],
  "225": [
    0n,
    417742819n,
  ],
  "226": [
    0n,
    626614229n,
  ],
  "227": [
    0n,
    835485639n,
  ],
  "228": [
    0n,
    1044357048n,
  ],
  "229": [
    0n,
    1253228458n,
  ],
  "230": [
    0n,
    1462099868n,
  ],
  "231": [
    0n,
    1670971278n,
  ],
  "232": [
    697347079n,
    2480629248n,
  ],
  "233": [
    2067256204n,
    0n,
  ],
  "234": [
    1808849179n,
    0n,
  ],
  "235": [
    1550442153n,
    0n,
  ],
  "236": [
    1292035127n,
    0n,
  ],
  "237": [
    1033628102n,
    0n,
  ],
  "238": [
    775221076n,
    0n,
  ],
  "239": [
    516814051n,
    0n,
  ],
  "240": [
    258407025n,
    0n,
  ],
}
`;

exports[`createCurveShape > both sides of active bin > real case bug - providing tokens were bigger than balance 1`] = `
{
  "-13710": [
    163676526069810n,
    0n,
  ],
  "-13711": [
    327353052139621n,
    0n,
  ],
  "-13712": [
    491029578209432n,
    0n,
  ],
  "-13713": [
    654706104279243n,
    0n,
  ],
  "-13714": [
    818382630349053n,
    0n,
  ],
  "-13715": [
    982059156418864n,
    0n,
  ],
  "-13716": [
    1145735682488675n,
    0n,
  ],
  "-13717": [
    1309412208558486n,
    0n,
  ],
  "-13718": [
    1473088734628296n,
    0n,
  ],
  "-13719": [
    1636765260698107n,
    0n,
  ],
  "-13720": [
    1800441786767918n,
    0n,
  ],
  "-13721": [
    1964118312837729n,
    0n,
  ],
  "-13722": [
    2127794838907539n,
    0n,
  ],
  "-13723": [
    2291471364977350n,
    0n,
  ],
  "-13724": [
    2455147891047161n,
    0n,
  ],
  "-13725": [
    2618824417116972n,
    0n,
  ],
  "-13726": [
    2782500943186783n,
    0n,
  ],
  "-13727": [
    2946177469256593n,
    0n,
  ],
  "-13728": [
    3109853995326404n,
    0n,
  ],
  "-13729": [
    3273530521396215n,
    0n,
  ],
  "-13730": [
    3437207047466026n,
    0n,
  ],
  "-13731": [
    3600883573535836n,
    0n,
  ],
  "-13732": [
    3764560099605647n,
    0n,
  ],
  "-13733": [
    3928236625675458n,
    0n,
  ],
  "-13734": [
    4091913151745269n,
    0n,
  ],
  "-13735": [
    4255589677815079n,
    0n,
  ],
  "-13736": [
    4419266203884890n,
    0n,
  ],
  "-13737": [
    4582942729954701n,
    0n,
  ],
  "-13738": [
    4746619256024512n,
    0n,
  ],
  "-13739": [
    4910295782094322n,
    0n,
  ],
  "-13740": [
    5073972308164133n,
    0n,
  ],
  "-13741": [
    5237648834233944n,
    0n,
  ],
  "-13742": [
    5401325360303755n,
    0n,
  ],
  "-13743": [
    5565001886373566n,
    0n,
  ],
  "-13744": [
    5728678412443376n,
    0n,
  ],
  "-13745": [
    5892354938513187n,
    0n,
  ],
  "-13746": [
    6056031464582998n,
    0n,
  ],
  "-13747": [
    6219707990652809n,
    0n,
  ],
  "-13748": [
    6383384516722619n,
    0n,
  ],
  "-13749": [
    6547061042792430n,
    0n,
  ],
  "-13750": [
    6710737568862241n,
    0n,
  ],
  "-13751": [
    6874414094932052n,
    0n,
  ],
  "-13752": [
    7038090621001862n,
    0n,
  ],
  "-13753": [
    7201767147071673n,
    0n,
  ],
  "-13754": [
    7365443673141484n,
    0n,
  ],
  "-13755": [
    7529120199211295n,
    0n,
  ],
  "-13756": [
    7692796725281105n,
    0n,
  ],
  "-13757": [
    7856473251350916n,
    0n,
  ],
  "-13758": [
    8020149777420727n,
    0n,
  ],
  "-13759": [
    8183826303490538n,
    0n,
  ],
  "-13760": [
    8347502829560349n,
    0n,
  ],
  "-13761": [
    8511179355630159n,
    0n,
  ],
  "-13762": [
    8674855881699970n,
    0n,
  ],
  "-13763": [
    8838532407769781n,
    0n,
  ],
  "-13764": [
    9002208933839592n,
    0n,
  ],
  "-13765": [
    9165885459909402n,
    0n,
  ],
  "-13766": [
    9329561985979213n,
    0n,
  ],
  "-13767": [
    9493238512049024n,
    0n,
  ],
  "-13768": [
    9656915038118835n,
    0n,
  ],
  "-13769": [
    9820591564188645n,
    0n,
  ],
  "-13770": [
    9984268090258456n,
    0n,
  ],
  "-13771": [
    10147944616328267n,
    0n,
  ],
  "-13772": [
    10311621142398078n,
    0n,
  ],
  "-13773": [
    10475297668467888n,
    0n,
  ],
  "-13774": [
    10638974194537699n,
    0n,
  ],
  "-13775": [
    10802650720607510n,
    0n,
  ],
  "-13776": [
    10966327246677321n,
    0n,
  ],
  "-13777": [
    11130003772747132n,
    0n,
  ],
  "-13778": [
    11293680298816942n,
    0n,
  ],
  "-13779": [
    11457356824886753n,
    0n,
  ],
  "-13780": [
    11621033350956564n,
    0n,
  ],
  "-13781": [
    11784709877026375n,
    0n,
  ],
  "-13782": [
    11948386403096185n,
    0n,
  ],
  "-13783": [
    12112062929165996n,
    0n,
  ],
  "-13784": [
    12275739455235807n,
    0n,
  ],
  "-13785": [
    12439415981305618n,
    0n,
  ],
  "-13786": [
    12603092507375428n,
    0n,
  ],
  "-13787": [
    12766769033445239n,
    0n,
  ],
  "-13788": [
    12930445559515050n,
    0n,
  ],
  "-13789": [
    13094122085584861n,
    0n,
  ],
  "-13790": [
    13257798611654671n,
    0n,
  ],
  "-13791": [
    13421475137724482n,
    0n,
  ],
  "-13792": [
    13585151663794293n,
    0n,
  ],
  "-13793": [
    13748828189864104n,
    0n,
  ],
  "-13794": [
    13912504715933915n,
    0n,
  ],
  "-13795": [
    14076181242003725n,
    0n,
  ],
  "-13796": [
    14239857768073536n,
    0n,
  ],
  "-13797": [
    14403534294143347n,
    0n,
  ],
  "-13798": [
    14567210820213158n,
    0n,
  ],
  "-13799": [
    14730887346282968n,
    0n,
  ],
  "-13800": [
    14894563872352779n,
    0n,
  ],
  "-13801": [
    15058240398422590n,
    0n,
  ],
  "-13802": [
    15221916924492401n,
    0n,
  ],
  "-13803": [
    15385593450562211n,
    0n,
  ],
  "-13804": [
    15549269976632022n,
    0n,
  ],
  "-13805": [
    15712946502701833n,
    0n,
  ],
  "-13806": [
    15876623028771644n,
    0n,
  ],
  "-13807": [
    16040299554841454n,
    0n,
  ],
  "-13808": [
    16203976080911265n,
    0n,
  ],
  "-13809": [
    16367652606981076n,
    0n,
  ],
  "-13810": [
    16531329133050887n,
    0n,
  ],
  "-13811": [
    16695005659120698n,
    0n,
  ],
  "-13812": [
    16858682185190508n,
    0n,
  ],
  "-13813": [
    17022358711260319n,
    0n,
  ],
  "-13814": [
    17186035237330130n,
    0n,
  ],
  "-13815": [
    17349711763399941n,
    0n,
  ],
  "-13816": [
    17513388289469751n,
    0n,
  ],
  "-13817": [
    17677064815539562n,
    0n,
  ],
  "-13818": [
    17840741341609373n,
    0n,
  ],
  "-13819": [
    18337833013376947n,
    681977286533n,
  ],
  "-13820": [
    0n,
    123257157933n,
  ],
  "-13821": [
    0n,
    122435443546n,
  ],
  "-13822": [
    0n,
    121613729160n,
  ],
  "-13823": [
    0n,
    120792014774n,
  ],
  "-13824": [
    0n,
    119970300388n,
  ],
  "-13825": [
    0n,
    119148586001n,
  ],
  "-13826": [
    0n,
    118326871615n,
  ],
  "-13827": [
    0n,
    117505157229n,
  ],
  "-13828": [
    0n,
    116683442843n,
  ],
  "-13829": [
    0n,
    115861728457n,
  ],
  "-13830": [
    0n,
    115040014070n,
  ],
  "-13831": [
    0n,
    114218299684n,
  ],
  "-13832": [
    0n,
    113396585298n,
  ],
  "-13833": [
    0n,
    112574870912n,
  ],
  "-13834": [
    0n,
    111753156525n,
  ],
  "-13835": [
    0n,
    110931442139n,
  ],
  "-13836": [
    0n,
    110109727753n,
  ],
  "-13837": [
    0n,
    109288013367n,
  ],
  "-13838": [
    0n,
    108466298981n,
  ],
  "-13839": [
    0n,
    107644584594n,
  ],
  "-13840": [
    0n,
    106822870208n,
  ],
  "-13841": [
    0n,
    106001155822n,
  ],
  "-13842": [
    0n,
    105179441436n,
  ],
  "-13843": [
    0n,
    104357727049n,
  ],
  "-13844": [
    0n,
    103536012663n,
  ],
  "-13845": [
    0n,
    102714298277n,
  ],
  "-13846": [
    0n,
    101892583891n,
  ],
  "-13847": [
    0n,
    101070869505n,
  ],
  "-13848": [
    0n,
    100249155118n,
  ],
  "-13849": [
    0n,
    99427440732n,
  ],
  "-13850": [
    0n,
    98605726346n,
  ],
  "-13851": [
    0n,
    97784011960n,
  ],
  "-13852": [
    0n,
    96962297574n,
  ],
  "-13853": [
    0n,
    96140583187n,
  ],
  "-13854": [
    0n,
    95318868801n,
  ],
  "-13855": [
    0n,
    94497154415n,
  ],
  "-13856": [
    0n,
    93675440029n,
  ],
  "-13857": [
    0n,
    92853725642n,
  ],
  "-13858": [
    0n,
    92032011256n,
  ],
  "-13859": [
    0n,
    91210296870n,
  ],
  "-13860": [
    0n,
    90388582484n,
  ],
  "-13861": [
    0n,
    89566868098n,
  ],
  "-13862": [
    0n,
    88745153711n,
  ],
  "-13863": [
    0n,
    87923439325n,
  ],
  "-13864": [
    0n,
    87101724939n,
  ],
  "-13865": [
    0n,
    86280010553n,
  ],
  "-13866": [
    0n,
    85458296166n,
  ],
  "-13867": [
    0n,
    84636581780n,
  ],
  "-13868": [
    0n,
    83814867394n,
  ],
  "-13869": [
    0n,
    82993153008n,
  ],
  "-13870": [
    0n,
    82171438622n,
  ],
  "-13871": [
    0n,
    81349724235n,
  ],
  "-13872": [
    0n,
    80528009849n,
  ],
  "-13873": [
    0n,
    79706295463n,
  ],
  "-13874": [
    0n,
    78884581077n,
  ],
  "-13875": [
    0n,
    78062866690n,
  ],
  "-13876": [
    0n,
    77241152304n,
  ],
  "-13877": [
    0n,
    76419437918n,
  ],
  "-13878": [
    0n,
    75597723532n,
  ],
  "-13879": [
    0n,
    74776009146n,
  ],
  "-13880": [
    0n,
    73954294759n,
  ],
  "-13881": [
    0n,
    73132580373n,
  ],
  "-13882": [
    0n,
    72310865987n,
  ],
  "-13883": [
    0n,
    71489151601n,
  ],
  "-13884": [
    0n,
    70667437214n,
  ],
  "-13885": [
    0n,
    69845722828n,
  ],
  "-13886": [
    0n,
    69024008442n,
  ],
  "-13887": [
    0n,
    68202294056n,
  ],
  "-13888": [
    0n,
    67380579670n,
  ],
  "-13889": [
    0n,
    66558865283n,
  ],
  "-13890": [
    0n,
    65737150897n,
  ],
  "-13891": [
    0n,
    64915436511n,
  ],
  "-13892": [
    0n,
    64093722125n,
  ],
  "-13893": [
    0n,
    63272007738n,
  ],
  "-13894": [
    0n,
    62450293352n,
  ],
  "-13895": [
    0n,
    61628578966n,
  ],
  "-13896": [
    0n,
    60806864580n,
  ],
  "-13897": [
    0n,
    59985150194n,
  ],
  "-13898": [
    0n,
    59163435807n,
  ],
  "-13899": [
    0n,
    58341721421n,
  ],
  "-13900": [
    0n,
    57520007035n,
  ],
  "-13901": [
    0n,
    56698292649n,
  ],
  "-13902": [
    0n,
    55876578262n,
  ],
  "-13903": [
    0n,
    55054863876n,
  ],
  "-13904": [
    0n,
    54233149490n,
  ],
  "-13905": [
    0n,
    53411435104n,
  ],
  "-13906": [
    0n,
    52589720718n,
  ],
  "-13907": [
    0n,
    51768006331n,
  ],
  "-13908": [
    0n,
    50946291945n,
  ],
  "-13909": [
    0n,
    50124577559n,
  ],
  "-13910": [
    0n,
    49302863173n,
  ],
  "-13911": [
    0n,
    48481148787n,
  ],
  "-13912": [
    0n,
    47659434400n,
  ],
  "-13913": [
    0n,
    46837720014n,
  ],
  "-13914": [
    0n,
    46016005628n,
  ],
  "-13915": [
    0n,
    45194291242n,
  ],
  "-13916": [
    0n,
    44372576855n,
  ],
  "-13917": [
    0n,
    43550862469n,
  ],
  "-13918": [
    0n,
    42729148083n,
  ],
  "-13919": [
    0n,
    41907433697n,
  ],
  "-13920": [
    0n,
    41085719311n,
  ],
  "-13921": [
    0n,
    40264004924n,
  ],
  "-13922": [
    0n,
    39442290538n,
  ],
  "-13923": [
    0n,
    38620576152n,
  ],
  "-13924": [
    0n,
    37798861766n,
  ],
  "-13925": [
    0n,
    36977147379n,
  ],
  "-13926": [
    0n,
    36155432993n,
  ],
  "-13927": [
    0n,
    35333718607n,
  ],
  "-13928": [
    0n,
    34512004221n,
  ],
  "-13929": [
    0n,
    33690289835n,
  ],
  "-13930": [
    0n,
    32868575448n,
  ],
  "-13931": [
    0n,
    32046861062n,
  ],
  "-13932": [
    0n,
    31225146676n,
  ],
  "-13933": [
    0n,
    30403432290n,
  ],
  "-13934": [
    0n,
    29581717903n,
  ],
  "-13935": [
    0n,
    28760003517n,
  ],
  "-13936": [
    0n,
    27938289131n,
  ],
  "-13937": [
    0n,
    27116574745n,
  ],
  "-13938": [
    0n,
    26294860359n,
  ],
  "-13939": [
    0n,
    25473145972n,
  ],
  "-13940": [
    0n,
    24651431586n,
  ],
  "-13941": [
    0n,
    23829717200n,
  ],
  "-13942": [
    0n,
    23008002814n,
  ],
  "-13943": [
    0n,
    22186288427n,
  ],
  "-13944": [
    0n,
    21364574041n,
  ],
  "-13945": [
    0n,
    20542859655n,
  ],
  "-13946": [
    0n,
    19721145269n,
  ],
  "-13947": [
    0n,
    18899430883n,
  ],
  "-13948": [
    0n,
    18077716496n,
  ],
  "-13949": [
    0n,
    17256002110n,
  ],
  "-13950": [
    0n,
    16434287724n,
  ],
  "-13951": [
    0n,
    15612573338n,
  ],
  "-13952": [
    0n,
    14790858951n,
  ],
  "-13953": [
    0n,
    13969144565n,
  ],
  "-13954": [
    0n,
    13147430179n,
  ],
  "-13955": [
    0n,
    12325715793n,
  ],
  "-13956": [
    0n,
    11504001407n,
  ],
  "-13957": [
    0n,
    10682287020n,
  ],
  "-13958": [
    0n,
    9860572634n,
  ],
  "-13959": [
    0n,
    9038858248n,
  ],
  "-13960": [
    0n,
    8217143862n,
  ],
  "-13961": [
    0n,
    7395429475n,
  ],
  "-13962": [
    0n,
    6573715089n,
  ],
  "-13963": [
    0n,
    5752000703n,
  ],
  "-13964": [
    0n,
    4930286317n,
  ],
  "-13965": [
    0n,
    4108571931n,
  ],
  "-13966": [
    0n,
    3286857544n,
  ],
  "-13967": [
    0n,
    2465143158n,
  ],
  "-13968": [
    0n,
    1643428772n,
  ],
  "-13969": [
    0n,
    821714386n,
  ],
}
`;

exports[`createCurveShape > both sides of active bin > return the correct shape #1 1`] = `
{
  "219": [
    0n,
    9527233n,
  ],
  "220": [
    0n,
    19054467n,
  ],
  "221": [
    0n,
    28581701n,
  ],
  "222": [
    0n,
    38108935n,
  ],
  "223": [
    0n,
    47636169n,
  ],
  "224": [
    0n,
    57163403n,
  ],
  "225": [
    0n,
    66690637n,
  ],
  "226": [
    0n,
    76217871n,
  ],
  "227": [
    0n,
    85745105n,
  ],
  "228": [
    0n,
    95272339n,
  ],
  "229": [
    0n,
    104799573n,
  ],
  "230": [
    0n,
    114326807n,
  ],
  "231": [
    0n,
    123854041n,
  ],
  "232": [
    37394666n,
    133021711n,
  ],
  "233": [
    120325666n,
    0n,
  ],
  "234": [
    112303955n,
    0n,
  ],
  "235": [
    104282244n,
    0n,
  ],
  "236": [
    96260533n,
    0n,
  ],
  "237": [
    88238822n,
    0n,
  ],
  "238": [
    80217111n,
    0n,
  ],
  "239": [
    72195400n,
    0n,
  ],
  "240": [
    64173688n,
    0n,
  ],
  "241": [
    56151977n,
    0n,
  ],
  "242": [
    48130266n,
    0n,
  ],
  "243": [
    40108555n,
    0n,
  ],
  "244": [
    32086844n,
    0n,
  ],
  "245": [
    24065133n,
    0n,
  ],
  "246": [
    16043422n,
    0n,
  ],
  "247": [
    8021711n,
    0n,
  ],
}
`;

exports[`createCurveShape > both sides of active bin > return the correct shape #2 1`] = `
{
  "226": [
    0n,
    591262n,
  ],
  "227": [
    0n,
    1182525n,
  ],
  "228": [
    0n,
    1773788n,
  ],
  "229": [
    0n,
    2365051n,
  ],
  "230": [
    0n,
    2956314n,
  ],
  "231": [
    0n,
    3547577n,
  ],
  "232": [
    558743526n,
    1987583477n,
  ],
  "233": [
    1688251294n,
    0n,
  ],
  "234": [
    1500667817n,
    0n,
  ],
  "235": [
    1313084340n,
    0n,
  ],
  "236": [
    1125500863n,
    0n,
  ],
  "237": [
    937917385n,
    0n,
  ],
  "238": [
    750333908n,
    0n,
  ],
  "239": [
    562750431n,
    0n,
  ],
  "240": [
    375166954n,
    0n,
  ],
  "241": [
    187583477n,
    0n,
  ],
}
`;

exports[`createCurveShape > left side of active bin > excluding active bin 1`] = `
{
  "227": [
    0n,
    133333333n,
  ],
  "228": [
    0n,
    266666666n,
  ],
  "229": [
    0n,
    399999999n,
  ],
  "230": [
    0n,
    533333333n,
  ],
  "231": [
    0n,
    666666666n,
  ],
}
`;

exports[`createCurveShape > left side of active bin > ignore tokens from right side 1`] = `
{
  "227": [
    0n,
    133333333n,
  ],
  "228": [
    0n,
    266666666n,
  ],
  "229": [
    0n,
    399999999n,
  ],
  "230": [
    0n,
    533333333n,
  ],
  "231": [
    0n,
    666666666n,
  ],
}
`;

exports[`createCurveShape > left side of active bin > including active bin 1`] = `
{
  "227": [
    0n,
    113015049n,
  ],
  "228": [
    0n,
    226030099n,
  ],
  "229": [
    0n,
    339045148n,
  ],
  "230": [
    0n,
    452060198n,
  ],
  "231": [
    0n,
    565075247n,
  ],
  "232": [
    85677228n,
    304774257n,
  ],
}
`;

exports[`createCurveShape > right side of active bin > excluding active bin 1`] = `
{
  "233": [
    133333333n,
    0n,
  ],
  "234": [
    123809523n,
    0n,
  ],
  "235": [
    114285714n,
    0n,
  ],
  "236": [
    104761904n,
    0n,
  ],
  "237": [
    95238095n,
    0n,
  ],
  "238": [
    85714285n,
    0n,
  ],
  "239": [
    76190476n,
    0n,
  ],
  "240": [
    66666666n,
    0n,
  ],
  "241": [
    57142857n,
    0n,
  ],
  "242": [
    47619047n,
    0n,
  ],
  "243": [
    38095238n,
    0n,
  ],
  "244": [
    28571428n,
    0n,
  ],
  "245": [
    19047619n,
    0n,
  ],
  "246": [
    9523809n,
    0n,
  ],
}
`;

exports[`createCurveShape > right side of active bin > ignore tokens from left side 1`] = `
{
  "233": [
    133333333n,
    0n,
  ],
  "234": [
    123809523n,
    0n,
  ],
  "235": [
    114285714n,
    0n,
  ],
  "236": [
    104761904n,
    0n,
  ],
  "237": [
    95238095n,
    0n,
  ],
  "238": [
    85714285n,
    0n,
  ],
  "239": [
    76190476n,
    0n,
  ],
  "240": [
    66666666n,
    0n,
  ],
  "241": [
    57142857n,
    0n,
  ],
  "242": [
    47619047n,
    0n,
  ],
  "243": [
    38095238n,
    0n,
  ],
  "244": [
    28571428n,
    0n,
  ],
  "245": [
    19047619n,
    0n,
  ],
  "246": [
    9523809n,
    0n,
  ],
}
`;

exports[`createCurveShape > right side of active bin > including active bin 1`] = `
{
  "232": [
    140558505n,
    500000000n,
  ],
  "233": [
    114592199n,
    0n,
  ],
  "234": [
    106407042n,
    0n,
  ],
  "235": [
    98221885n,
    0n,
  ],
  "236": [
    90036727n,
    0n,
  ],
  "237": [
    81851570n,
    0n,
  ],
  "238": [
    73666413n,
    0n,
  ],
  "239": [
    65481256n,
    0n,
  ],
  "240": [
    57296099n,
    0n,
  ],
  "241": [
    49110942n,
    0n,
  ],
  "242": [
    40925785n,
    0n,
  ],
  "243": [
    32740628n,
    0n,
  ],
  "244": [
    24555471n,
    0n,
  ],
  "245": [
    16370314n,
    0n,
  ],
  "246": [
    8185157n,
    0n,
  ],
}
`;

exports[`createCurveShape > with fallback ratio > ignore tokens from left side 1`] = `
{
  "455": [
    0n,
    344507976n,
  ],
  "456": [
    0n,
    689015953n,
  ],
  "457": [
    0n,
    1033523929n,
  ],
  "458": [
    0n,
    1378031906n,
  ],
  "459": [
    0n,
    1722539883n,
  ],
  "460": [
    0n,
    2067047859n,
  ],
  "461": [
    0n,
    2411555836n,
  ],
  "462": [
    800129n,
    353776654n,
  ],
  "463": [
    49967n,
    0n,
  ],
  "464": [
    42829n,
    0n,
  ],
  "465": [
    35691n,
    0n,
  ],
  "466": [
    28552n,
    0n,
  ],
  "467": [
    21414n,
    0n,
  ],
  "468": [
    14276n,
    0n,
  ],
  "469": [
    7138n,
    0n,
  ],
}
`;
